syntax = "proto3";

package auth;

option go_package = "goAuth/proto;proto";

service AuthService {
    rpc Signup (SignupRequest) returns (AuthResponse);
    rpc Login (LoginRequest) returns (AuthResponse);
    rpc ValidateToken (ValidateRequest) returns (ValidateResponse);
}

message SignupRequest {
    string email = 1;
    string password = 2;
}

message LoginRequest {
    string email = 1;
    string password = 2;
}

message AuthResponse {
    string token = 1;
    string message = 2;
}

message ValidateRequest {
    string token = 1;
}

message ValidateResponse {
    bool valid = 1;
    string userEmail = 2;
}